# Zootact

./: .dockerignore  .env.example  .gitignore  DEPLOY_OCI_CLOUDFLARE.md  FIREBASE_MIGRATION_COMPLETE.md  FIREBASE_QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  wrangler.jsonc
.serena/: project.yml
ai-service/: .env.example  README.md  pyproject.toml
ai-service/app/: __init__.py  config.py  main.py
ai-service/app/core/: __init__.py  board.py  evaluator.py  minimax.py
ai-service/app/routers/: __init__.py  ai.py  anti_cheat.py  health.py
ai-service/app/services/: __init__.py  analysis.py  anti_cheat.py
ai-service/tests/: __init__.py  test_anti_cheat.py  test_board.py  test_minimax.py
backend/: IMPLEMENTATION_COMPLETE.md  Zootact.sln
backend/Database/: InitialMigration.sql
backend/Zootact.API/: Dockerfile  Program.cs  Zootact.API.csproj  Zootact.API.http  appsettings.json
backend/Zootact.API/Config/: README.md
backend/Zootact.API/Controllers/: AuthController.cs  HealthController.cs  LobbiesController.cs  MatchController.cs  MatchmakingController.cs
backend/Zootact.API/Hubs/: GameHub.cs  GameHubGroups.cs
backend/Zootact.Infrastructure/: DependencyInjection.cs  Zootact.Infrastructure.csproj
backend/Zootact.Tests/: Zootact.Tests.csproj
deploy/: Caddyfile  backup-postgres.sh  oci.env.example
frontend/: .env.example  README.md  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
scripts/: db-users.ts  dev-status.ts
(+124 files in other folders)
